--- a/Develop/Output/team.html
+++ b/Develop/Output/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Kenneth</h2>
+        <h2 class="card-title">aga</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 9</li>
-            <li class="list-group-item">Email: <a href="mailto:kenneth@kenneth.com">kenneth@kenneth.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/kenneth" target="_blank" rel="noopener noreferrer">kenneth</a></li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:afk@gama.com">afk@gama.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/adkfa" target="_blank" rel="noopener noreferrer">adkfa</a></li>
         </ul>
     </div>
 </div>
