--- a/Develop/Output/team.html
+++ b/Develop/Output/team.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Russo+One&family=Squada+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
@@ -25,14 +26,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">aga</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h2 class="card-title">Michael Scott</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:afk@gama.com">afk@gama.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/adkfa" target="_blank" rel="noopener noreferrer">adkfa</a></li>
+            <li class="list-group-item">Email: <a href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
+            <li class="list-group-item">Office number: 11</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Dwight Schrute</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/BearsBeetsBattlestarGalactica" target="_blank" rel="noopener noreferrer">BearsBeetsBattlestarGalactica</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Ryan Howard</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 9</li>
+            <li class="list-group-item">Email: <a href="mailto:ryan@dundermifflin.com">ryan@dundermifflin.com</a></li>
+            <li class="list-group-item">School: Somewhere In Pennsylvania</li>
         </ul>
     </div>
 </div>
